Copy assets and styles from static code

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
-<div class="background">
+<div id="background">
   <header class="cf">
     <div class="wrapper-wide"><a id="logo" href="index.html">SmokeSignals.fm</a>
       <nav>
