--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,16 +1,25 @@
 <div id="background">
   <header class="cf">
-    <div class="wrapper-wide"><a id="logo" href="index.html">SmokeSignals.fm</a>
+    <div class="wrapper-wide">
+      <a id="logo" href="#">SmokeSignals.fm</a>
       <nav>
         <ul>
+          <% unless podcast_signed_in? %>
           <li><a href="podcasts.html">Search</a></li>
-          <li><a href="sign-in.html">Sign In</a></li>
-          <li><a href="sign-up.html">Speak</a></li>
+          <li><%= link_to "Sign In", new_podcast_session_path %></li>
+          <li><%= link_to "Create a Podcast", new_podcast_registration_path %></li>
+          <% else %>
+            <li><a href="#">Dashboard</a></li>
+            <li><a href="podcasts.html">Search</a></li>
+            <li><%= link_to "Sign Out", destroy_podcast_session_path, method: :delete %></li>
+          <% end %>
         </ul>
       </nav>
     </div>
   </header>
   <div class="wrapper-skinny">
-    <h1>Search for Podcasts from Indian Country or Create Your Own</h1><a href="sign-in.html" class="btn btn-hl">Speak Up</a><a href="podcasts.html" class="btn btn-df">Search</a>
+    <h1>Search for Podcasts from Indian Country or Create Your Own</h1>
+    <%= link_to "Create a Podcast", new_podcast_registration_path, class: "btn btn-hl" %>
+    <a href="podcasts.html" class="btn btn-df">Search</a>
   </div>
 </div>
