--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -99,6 +99,11 @@ body {
         margin-left: 2.5rem;
         text-transform: uppercase;
         font-size: 1rem;
+        a {
+          text-decoration: none;
+          color: $dark;
+        }
+
         &:hover {
           cursor: pointer;
         }
@@ -112,6 +117,7 @@ body {
     repeat: no-repeat;
     size: cover;
     position: center center;
+    width: 100%
   };
   margin-bottom: 4rem;
   h1 {
@@ -196,5 +202,5 @@ textarea {
 // @import "podcasts";
 // @import "podcast-show";
 // @import "episode";
-// @import "dashboard";
-// @import "sign-in-sign-up";
+@import "dashboard";
+@import "sign-in-sign-up";
