--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,12 +24,12 @@
     <nav>
       <ul>
         <% unless podcast_signed_in? %>
-        <li><a>Search</a></li>
+        <li><%= link_to "Search", podcasts_path %></li>
         <li><%= link_to "Sign In", new_podcast_session_path %></li>
         <li><%= link_to "Create a Podcast", new_podcast_registration_path %></li>
         <% else %>
           <li><a href="#">Dashboard</a></li>
-          <li><a href="podcasts.html">Search</a></li>
+          <li><%= link_to "Search", podcasts_path %></li>
           <li><%= link_to "Sign Out", destroy_podcast_session_path, method: :delete %></li>
         <% end %>
       </ul>
