--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,12 +5,12 @@
       <nav>
         <ul>
           <% unless podcast_signed_in? %>
-          <li><a href="podcasts.html">Search</a></li>
+          <li><%= link_to "Search", podcasts_path %></li>
           <li><%= link_to "Sign In", new_podcast_session_path %></li>
           <li><%= link_to "Create a Podcast", new_podcast_registration_path %></li>
           <% else %>
             <li><a href="#">Dashboard</a></li>
-            <li><a href="podcasts.html">Search</a></li>
+            <li><%= link_to "Search", podcasts_path %></li>
             <li><%= link_to "Sign Out", destroy_podcast_session_path, method: :delete %></li>
           <% end %>
         </ul>
@@ -20,6 +20,6 @@
   <div class="wrapper-skinny">
     <h1>Search for Podcasts from Indian Country or Create Your Own</h1>
     <%= link_to "Create a Podcast", new_podcast_registration_path, class: "btn btn-hl" %>
-    <a href="podcasts.html" class="btn btn-df">Search</a>
+    <%= link_to "Search", podcasts_path, class: "btn btn-df" %>
   </div>
 </div>
