Add Episode Ctlr and Views

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -201,6 +201,6 @@ textarea {
 @import "welcome";
 @import "podcasts";
 @import "podcast-show";
-// @import "episode";
+@import "episodes";
 @import "dashboard";
 @import "sign-in-sign-up";
