--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 
 <header id ="main-header" class="cf">
   <div class="wrapper-wide">
-    <a><%= link_to "SmokeSignals.fm", root_path, id: "logo" %></a>
+    <%= link_to "SmokeSignals.fm", root_path, id: "logo" %>
     <nav>
       <ul>
         <% unless podcast_signed_in? %>
@@ -28,7 +28,7 @@
         <li><%= link_to "Sign In", new_podcast_session_path %></li>
         <li><%= link_to "Create a Podcast", new_podcast_registration_path %></li>
         <% else %>
-          <li><a href="#">Dashboard</a></li>
+          <li><%= link_to "Dashboard", root_path %></li>
           <li><%= link_to "Search", podcasts_path %></li>
           <li><%= link_to "Sign Out", destroy_podcast_session_path, method: :delete %></li>
         <% end %>
