--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,18 +1,12 @@
 <div id="background">
   <header class="cf">
     <div class="wrapper-wide">
-      <a><% link_to "SmokeSignals.fm", root_path, id: "logo" %></a>
+      <%= link_to "SmokeSignals.fm", root_path, id: "logo" %>
       <nav>
         <ul>
-          <% unless podcast_signed_in? %>
           <li><%= link_to "Search", podcasts_path %></li>
           <li><%= link_to "Sign In", new_podcast_session_path %></li>
           <li><%= link_to "Create a Podcast", new_podcast_registration_path %></li>
-          <% else %>
-            <li><a href="#">Dashboard</a></li>
-            <li><%= link_to "Search", podcasts_path %></li>
-            <li><%= link_to "Sign Out", destroy_podcast_session_path, method: :delete %></li>
-          <% end %>
         </ul>
       </nav>
     </div>
