--- a/app/views/episodes/edit.html.erb
+++ b/app/views/episodes/edit.html.erb
@@ -1,7 +1,7 @@
 <div id="podcast-show">
   <div id="show-banner">
     <div class="wrapper-skinny">
-      <h1><%= podcast.title + " " + "Dashboard" %></h1>
+      <h1><%= podcasts.title + " " + "Dashboard" %></h1>
     </div>
   </div>
 </div>
