Add mp3 Upload Ability

--- a/app/views/episodes/_form.html.erb
+++ b/app/views/episodes/_form.html.erb
@@ -12,5 +12,10 @@
     <%= f.file_field :episode_thumbnail %>
   </div>
 
+  <div class="field">
+    <%= f.label :mp3 %> <br>
+    <%= f.file_field :mp3 %>
+  </div>
+
   <%= f.submit class: "btn btn-hl btn-block" %>
 <% end %>
