--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -30,6 +30,42 @@
     <%= image_tag @episode.episode_thumbnail.url(:medium), class: "current-episode-thumbnail" %>
     <h2><%= @episode.title %></h2>
     <p class="description"><%= @episode.description %></p>
+
+    <div id="jquery_jplayer_1" class="jp-jplayer"></div>
+      <div id="jp_container_1" class="jp-audio">
+        <div class="jp-type-single">
+          <div class="jp-gui jp-interface">
+            <ul class="jp-controls">
+              <li><a href="javascript:;" class="jp-play" tabindex="1" title="play">&#61515;</a></li>
+              <li><a href="javascript:;" class="jp-pause" tabindex="1" title="pause">&#61516;</a></li>
+              <li><a href="javascript:;" class="jp-mute" tabindex="1" title="mute">&#61480;</a></li>
+              <li><a href="javascript:;" class="jp-unmute" tabindex="1" title="unmute">&#61478;</a></li>
+            </ul>
+
+            <div class="jp-progress">
+              <div class="jp-seek-bar">
+                <div class="jp-play-bar"></div>
+              </div>
+            </div>
+
+            <div class="jp-time-holder">
+              <div class="jp-current-time"></div>
+            </div>
+
+            <div class="jp-volume-bar">
+              <div class="jp-volume-bar-value"></div>
+            </div>
+
+            <div class="jp-no-solution">
+              <span>Update Required</span>
+              To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+            </div>
+          </div>
+        </div>
+      </div>
+		</div>
+	</div>
+
   </div>
 </div>
 
@@ -56,3 +92,18 @@
 </div>
 
 <div class="pagination"><span class="previous_page disabled">Previous</span><em class="current">1</em><a href-"#>2</a><a href="#" class="next_page">Next</a></div>
+
+<script>
+  $(document).ready(function(){
+    $("#jquery_jplayer_1").jPlayer({
+      ready: function () {
+        $(this).jPlayer("setMedia", {
+          mp3: "<%= @episode.mp3.url %>"
+        });
+      },
+      cssSelectorAncestor: "#jp_container_1",
+      swfPath: "/app/assets/javascripts",
+      supplied: "mp3",
+    });
+  });
+</script>
