--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,13 @@
 <body>
 
 <% if alert %>
-  <p class="alert">
-    <%= alert %>
-  </p>
+  <div class="notice-wrapper">
+    <p class="alert"><%= alert %></p>
+  </div>
 <% elsif notice %>
-  <p class="notice">
-    <%= notice %>
-  </p>
+  <div class="notice-wrapper">
+    <p class="notice"><%= notice %></p>
+  </div>
 <% end %>
 
 <% unless current_page?(root_path) %>
@@ -23,6 +23,16 @@
 <% end %>
 
 <%= yield %>
+
+<script>
+  $(document).ready(function() {
+    setTimeout(function() {
+      $('.notice-wrapper').fadeOut("slow", function() {
+        $this.remove();
+      });
+    }, 950 );
+  });
+</script>
 
 </body>
 </html>
