--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -56,22 +56,23 @@ body {
 }
 
 .btn {
-  color: white;
+  color: $highlight;
   text-decoration: none;
   font-size: 1rem;
   padding: 1rem 2rem;
   border-radius: 2rem;
   outline: none;
-  border: none;
+  border: 2px solid $highlight;
 }
 
 .btn-hl {
-  background: $highlight;
+  background: $white;
   transition: background 0.4s ease-in-out;
   display: inline-block;
   min-width: 8.5rem;
   &:hover {
-    background: darken($highlight, 7.5%);
+    background: $highlight;
+    color: $white;
   }
 }
 
@@ -118,6 +119,7 @@ body {
         margin-left: 2.5rem;
         text-transform: uppercase;
         font-size: 1rem;
+
         a {
           text-decoration: none;
           color: $dark;
@@ -125,6 +127,8 @@ body {
 
         &:hover {
           cursor: pointer;
+          border-bottom: 1px solid $highlight;
+
         }
       }
     }
