--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
     <nav>
       <ul>
         <% unless podcast_signed_in? %>
-        <li><%= link_to "Search", podcasts_path %></li>
+        <li><%= link_to "Explore", podcasts_path %></li>
         <li><%= link_to "Sign In", new_podcast_session_path %></li>
         <li><%= link_to "Create a Podcast", new_podcast_registration_path %></li>
         <% else %>
