--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -7,6 +7,11 @@ $white: #ffffff;
 $dark: #443847;
 $light: #edeff5;
 
+$flat-red: #F24536;
+$flat-carrot: #FCA520;
+$flat-turq: #2AC2C7;
+$flat-blue: #2C3E50;
+
 body {
   font-family: "Quicksand", sans-serif;
 }
@@ -76,6 +81,32 @@ body {
   }
 }
 
+.btn-carrot {
+  color: $flat-carrot;
+  border: 2px solid $flat-carrot;
+  background: $white;
+  transition: background 0.4s ease-in-out;
+  display: inline-block;
+  min-width: 8.5rem;
+  &:hover {
+    background: $flat-carrot;
+    color: $white;
+  }
+}
+
+.btn-turq {
+  color: $flat-turq;
+  border: 2px solid $flat-turq;
+  background: $white;
+  transition: background 0.4s ease-in-out;
+  display: inline-block;
+  min-width: 8.5rem;
+  &:hover {
+    background: $flat-turq;
+    color: $white;
+  }
+}
+
 .btn-df {
   background: $white;
   color: $highlight;
@@ -127,7 +158,7 @@ body {
 
         &:hover {
           cursor: pointer;
-          border-bottom: 1px solid $highlight;
+          border-bottom: 1px solid $flat-red;
 
         }
       }
