--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -8,6 +8,8 @@
   background-attachment: fixed;
   header {
     padding: 2.5rem 0;
+    text-align: center;
+
     #logo {
       text-decoration: none;
       display: inline;
@@ -17,13 +19,31 @@
       font-size: 2.5rem;
       font-weight: 300;
       letter-spacing: 3px;
+
+      @media screen and (max-width: 1024px) {
+        float: none;
+        display: block;
+      }
     }
+
     nav {
       display: inline-block;
       float: right;
       margin-top: 1rem;
+
+      @media screen and (max-width: 1024px) {
+        float: none;
+        display: block;
+      }
+
       ul {
         margin: 0;
+
+        @media screen and (max-width: 1024px) {
+          -webkit-padding-start: 0px;
+        }
+
+
         li {
           display: inline;
           list-style: none;
@@ -31,15 +51,21 @@
           margin-left: 2.5rem;
           text-transform: uppercase;
           font-size: 1rem;
+
+          @media screen and (max-width: 520px) {
+            display: block;
+            margin: 1.5rem;
+          }
+
           a {
             text-decoration: none;
             color: $dark;
+            &:hover {
+              cursor: pointer;
+              border-bottom: 1px solid $flat-red;
+            }
           }
-          &:hover {
-            cursor: pointer;
-            color: $highlight;
-            border-bottom: 1px solid $flat-red;
-          }
+
         }
       }
     }
