--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -12,8 +12,10 @@
     </div>
   </header>
   <div class="wrapper-skinny">
-    <h1>Explore Podcasts from Indian Country or Create Your Own</h1>
-    <%= link_to "Create a Podcast", new_podcast_registration_path, class: "btn btn-carrot" %>
-    <%= link_to "Explore", podcasts_path, class: "btn btn-turq" %>
+    <div id="banner">
+      <h1>Explore Podcasts from Indian Country or Create Your Own</h1>
+      <%= link_to "Create a Podcast", new_podcast_registration_path, class: "btn btn-carrot" %>
+      <%= link_to "Explore", podcasts_path, class: "btn btn-turq" %>
+    </div>
   </div>
 </div>
