--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,8 @@ $flat-carrot: #FCA520;
 $flat-turq: #2AC2C7;
 $flat-blue: #2C3E50;
 
+$black: #313131;
+
 body {
   font-family: "Quicksand", sans-serif;
 }
@@ -19,6 +21,10 @@ body {
 .wrapper-wide {
   width: 90%;
   margin: 0 auto;
+}
+
+#banner  {
+  padding-bottom: 5rem
 }
 
 .wrapper {
@@ -100,7 +106,7 @@ body {
   background: $white;
   transition: background 0.4s ease-in-out;
   display: inline-block;
-  min-width: 8.5rem;
+  min-width: 10rem;
   &:hover {
     background: $flat-turq;
     color: $white;
@@ -133,7 +139,7 @@ body {
   #logo {
     text-decoration: none;
     display: inline-block;
-    color: $dark;
+    color: $black;
     float: left;
     text-transform: uppercase;
     font-size: 2.5rem;
@@ -170,14 +176,18 @@ body {
       li {
         display: inline-block;
         list-style: none;
-        color: black;
+        color: $black;
         margin-left: 2.5rem;
         text-transform: uppercase;
         font-size: 1rem;
 
+        @media screen and (max-width: 1024px) {
+          margin: 0 1.5rem;
+        }
+
         @media screen and (max-width: 520px) {
           display: block;
-          margin: 1.5rem;
+          margin: 1.5rem 0;
         }
 
         a {
