--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -13,7 +13,7 @@
     #logo {
       text-decoration: none;
       display: inline;
-      color: $dark;
+      color: $black;
       float: left;
       text-transform: uppercase;
       font-size: 2.5rem;
@@ -51,10 +51,14 @@
         li {
           display: inline;
           list-style: none;
-          color: black;
+          color: $black;
           margin-left: 2.5rem;
           text-transform: uppercase;
           font-size: 1rem;
+
+          @media screen and (max-width: 1024px) {
+            margin: 0 1.5rem;
+          }
 
           @media screen and (max-width: 520px) {
             display: block;
@@ -81,7 +85,7 @@
     text-align: center;
     background-image: none;
     h1 {
-      color: $flat-blue;
+      color: $black;
       font: {
         weight: 500;
         size: 3.5rem;
