Update Responsive Header

--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -227,23 +227,19 @@ body {
 
     ul {
       margin: 0;
-      overflow: hidden;
-
-      @media screen and (max-width: 1024px) {
-        -webkit-padding-start: 0px;
-      }
+      -webkit-padding-start: 0;
+      -webkit-margin-before: 0;
+      -webkit-margin-after: 0;
+      -webkit-padding-start: 0px;
+      -webkit-padding-start: 0px;
 
       li {
         display: inline-block;
         list-style: none;
         color: $black;
-        margin-left: 2.5rem;
         text-transform: uppercase;
         font-size: 1rem;
-
-        @media screen and (max-width: 1024px) {
-          margin: 0 1.5rem;
-        }
+        margin-left: 0;
 
         @media screen and (max-width: 520px) {
           display: block;
@@ -253,11 +249,14 @@ body {
         a {
           text-decoration: none;
           color: $dark;
+          padding: 0 1.5rem;
+
+          @media screen and (max-width: 520px) {
+            padding: 0 3rem;
+          }
 
           &:hover {
             cursor: pointer;
-            border-bottom: 1px solid $flat-red;
-
           }
         }
 
