--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -10,7 +10,7 @@
             <%= image_tag podcasts.thumbnail.url(:medium) %>
             <div class="podcast-overview">
               <h2><%= podcasts.title %></h2>
-              <p class="episode-count">1 Episode</p>
+              <p class="episode-count"><%= Episode.count %> Episode</p>
             </div>
           </li>
         <% end %>
