--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -19,9 +19,8 @@
   <%= link_to podcasts_path do %>
   All Podcasts
   <span>/</span>
-  <%= link_to @podcast.title, podcast_path(@podcast) %>
-  <span>/</span>
-  <%= link_to @episode.title %>
+    <%= link_to @podcast.title + " /", podcast_path(@podcast) %>
+    <%= link_to @episode.title %>
   <% end %>
 </div>
 
