--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -218,7 +218,6 @@ body {
   nav {
     display: inline-block;
     float: right;
-    margin-top: 1rem;
 
     @media screen and (max-width: 1024px) {
       float: none;
@@ -226,12 +225,7 @@ body {
     }
 
     ul {
-      margin: 0;
-      -webkit-padding-start: 0;
-      -webkit-margin-before: 0;
-      -webkit-margin-after: 0;
-      -webkit-padding-start: 0px;
-      -webkit-padding-start: 0px;
+      padding-left: 0;
 
       li {
         display: inline-block;
