--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -206,9 +206,13 @@ body {
     font-weight: 300;
     letter-spacing: 3px;
 
-    @media screen and (max-width: 1024px) {
+    @media screen and (max-width: 1125px) {
       float: none;
       display: block;
+    }
+
+    @media screen and (max-width: 960px) {
+      font-size: 2rem;
     }
 
     @media screen and (max-width: 470px) {
@@ -219,7 +223,7 @@ body {
     display: inline-block;
     float: right;
 
-    @media screen and (max-width: 1024px) {
+    @media screen and (max-width: 1125px) {
       float: none;
       display: block;
     }
@@ -235,26 +239,60 @@ body {
         font-size: 1rem;
         margin-left: 0;
 
-        @media screen and (max-width: 520px) {
+        @media screen and (max-width: 620px) {
           display: block;
           margin: 1.5rem 0;
+          font-size: .8rem;
         }
 
         a {
           text-decoration: none;
-          color: $dark;
+          color: $black;
           padding: 0 1.5rem;
 
-          @media screen and (max-width: 520px) {
-            padding: 0 3rem;
+          @media screen and (max-width: 620px) {
+            font-size: .8rem;
           }
 
-          &:hover {
-            cursor: pointer;
-          }
         }
 
+        a::before,
+        a::after {
+          opacity: 0;
+          display: inline-block;
+          -webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
+          -moz-transition: -moz-transform 0.3s, opacity 0.2s;
+          transition: transform 0.3s, opacity 0.2s;
+        }
 
+        a::before {
+          margin-right: 10px;
+          display: inline-block;
+          content: "(";
+          -webkit-transform: translateX(20px);
+          -moz-transform: -moz-translateX(20px);
+          transform: translateX(20px);
+
+        }
+
+        a::after {
+          margin-left: 10px;
+          display: inline-block;
+          content: ")";
+          -webkit-transform: translateX(-20px);
+          -moz-transform: -moz-translateX(-20px);
+          transform: translateX(-20px);
+        }
+
+        a:hover::before,
+        a:hover::after,
+        a:focus::before,
+        a:focus::after {
+          opacity: 1;
+          -webkit-transform: translateX(0px);
+          -moz-transform: translateX(0px);
+          transform: translateX(0px);
+        }
       }
     }
   }
