--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -22,9 +22,13 @@
       font-weight: 300;
       letter-spacing: 3px;
 
-      @media screen and (max-width: 1024px) {
+      @media screen and (max-width: 1125px) {
         float: none;
         display: block;
+      }
+
+      @media screen and (max-width: 960px) {
+        font-size: 2rem;
       }
 
       @media screen and (max-width: 470px) {
@@ -36,7 +40,7 @@
       display: inline-block;
       float: right;
 
-      @media screen and (max-width: 1024px) {
+      @media screen and (max-width: 1125px) {
         float: none;
         display: block;
       }
@@ -52,25 +56,60 @@
           font-size: 1rem;
           margin-left: 0;
 
-          @media screen and (max-width: 520px) {
+          @media screen and (max-width: 620px) {
             display: block;
             margin: 1.5rem 0;
+            font-size: .8rem;
           }
 
           a {
             text-decoration: none;
-            color: $dark;
+            color: $black;
             padding: 0 1.5rem;
 
-            @media screen and (max-width: 520px) {
-              padding: 0 3rem;
+            @media screen and (max-width: 620px) {
+              font-size: .8rem;
             }
 
-            &:hover {
-              cursor: pointer;
-            }
           }
 
+          a::before,
+          a::after {
+            opacity: 0;
+            display: inline-block;
+            -webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
+            -moz-transition: -moz-transform 0.3s, opacity 0.2s;
+            transition: transform 0.3s, opacity 0.2s;
+          }
+
+          a::before {
+            margin-right: 10px;
+            display: inline-block;
+            content: "(";
+            -webkit-transform: translateX(20px);
+            -moz-transform: -moz-translateX(20px);
+            transform: translateX(20px);
+
+          }
+
+          a::after {
+            margin-left: 10px;
+            display: inline-block;
+            content: ")";
+            -webkit-transform: translateX(-20px);
+            -moz-transform: -moz-translateX(-20px);
+            transform: translateX(-20px);
+          }
+
+          a:hover::before,
+          a:hover::after,
+          a:focus::before,
+          a:focus::after {
+            opacity: 1;
+            -webkit-transform: translateX(0px);
+            -moz-transform: translateX(0px);
+            transform: translateX(0px);
+          }
         }
       }
     }
@@ -88,12 +127,28 @@
         size: 3.5rem;
       };
       letter-spacing: 1px;
-      margin: 7rem 0 2rem 0;
+      margin: 4rem 0 2rem 0;
+
+      @media screen and (max-width: 1125px) {
+        margin: 1rem;
+        font-size: 3rem;
     }
+
+      @media screen and (max-width: 620px) {
+        font-size: 2rem
+    }
+
+  }
     .btn {
       margin: 1.5rem 2.5% 0 2.5%;
       font-size: 1.3rem;
+
+      @media screen and (max-width: 620px) {
+        font-size: .8rem;
+      }
     }
+
+
   }
 }
 
