--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div id="background">
   <header class="cf">
     <div class="wrapper-wide">
-      <%= link_to "SmokeSignals.fm", root_path, id: "logo" %>
+      <%= link_to image_tag("SmokeSignal-teepeetower(s).png", :id => "sslogo"), root_path %>
       <nav>
         <ul>
           <li><%= link_to "Explore", podcasts_path %></li>
