--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -6,8 +6,11 @@
   background-size: cover;
   background-position: 50% 50%;
   background-attachment: fixed;
+//  background: #FF9800; // orange
+//  background: #FFC107; // amber
+
   header {
-    padding: 2.5rem 0;
+    padding: .5rem;
     text-align: center;
     box-sizing: border-box;
     text-align: center;
@@ -59,8 +62,10 @@
     nav {
       display: inline-block;
       float: right;
+      padding: 1.5rem 0 0 0;
 
       @media screen and (max-width: 1125px) {
+        padding-top: .5rem;
         float: none;
         display: block;
       }
@@ -71,14 +76,13 @@
         li {
           display: inline-block;
           list-style: none;
-          color: $black;
           text-transform: uppercase;
           font-size: 1rem;
           margin-left: 0;
 
           @media screen and (max-width: 620px) {
             display: block;
-            margin: 1.5rem 0;
+            padding: .5rem 0;
             font-size: .8rem;
           }
 
@@ -89,6 +93,7 @@
 
             @media screen and (max-width: 620px) {
               font-size: .8rem;
+              padding: 0rem;
             }
 
           }
@@ -144,10 +149,26 @@
       color: $black;
       font: {
         weight: 500;
-        size: 3.5rem;
+        size: 3rem;
       };
       letter-spacing: 1px;
       margin: 4rem 0 2rem 0;
+
+      span {
+        color: #FF6D00; // orange accent
+
+      }
+
+      a {
+        color: $black;
+        text-decoration: none;
+        border-bottom: 2px solid $black;
+
+        &:hover {
+           color: #FF6D00; // orange accent
+          border-bottom: 2px solid #FF6D00;
+        }
+      }
 
       @media screen and (max-width: 1125px) {
         margin: 1rem;
@@ -162,18 +183,11 @@
     .btn {
       margin: 1.5rem 2.5% 0 2.5%;
       font-size: 1.3rem;
+      font-weight: 700;
 
       @media screen and (max-width: 620px) {
         font-size: .8rem;
       }
     }
-
-
   }
-}
-
-.main {
-  margin: 0px;
-  display: block;
-  clear: both;
 }
