--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -13,9 +13,12 @@
   </header>
   <div class="wrapper-skinny">
     <div id="banner">
-      <h1>Explore Podcasts from Indian Country or Create Your Own</h1>
-      <%= link_to "Create a Podcast", new_podcast_registration_path, class: "btn btn-carrot" %>
-      <%= link_to "Explore", podcasts_path, class: "btn btn-turq" %>
+      <h1><%= link_to "Explore", podcasts_path %> Podcasts<br>from <span id="country">Indian&nbsp;Country</span><br> or <%= link_to "Create", new_podcast_registration_path %> Your Own</h1>
     </div>
   </div>
 </div>
+<footer class="main-footer">
+  <small>
+    Smoke Signals &copy; 2015
+  </small>
+</footer>
