Modify Centering of Welcome Banner

--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -67,11 +67,6 @@ $white: #ffffff;
 $dark: #443847;
 $light: #edeff5;
 
-$flat-red: #F24536;
-$flat-carrot: #FCA520;
-$flat-turq: #2AC2C7;
-$flat-blue: #2C3E50;
-
 $black: #505050;
 
 body {
@@ -85,7 +80,7 @@ body {
 }
 
 #banner  {
-  position: absolute;
+  position: fixed;
   top: 46%;
   left: 50%;
   margin-right: -50%;
