--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -71,7 +71,8 @@ $black: #505050;
 
 body {
   font-family: 'SinkinSans XLight', sans-serif;
-  position: relative
+  position: relative;
+  height: 100%;
 }
 
 .wrapper-wide {
@@ -80,11 +81,25 @@ body {
 }
 
 #banner  {
-  position: fixed;
-  top: 46%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 45%;
+  min-width: 320px;
+  max-width: 560px;
+  overflow: auto;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+
+  @media screen and (max-width: 1125px) {
+    height: 30%;
+}
+
+  @media screen and(max-width: 630px) {
+    height: 20%;
+  }
 }
 
 .wrapper {
@@ -93,7 +108,7 @@ body {
 }
 
 .wrapper-skinny {
-  width: 50%;
+  width: 60%;
   margin: 0 auto;
 }
 
