Modify Banner on Welcome Page for iPhone Devices

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -94,6 +94,8 @@
             @media screen and (max-width: 630px) {
               font-size: .8rem;
               padding: 0rem;
+              color: white;
+
             }
 
           }
@@ -175,8 +177,9 @@
     }
 
       @media screen and (max-width: 630px) {
-        font-size: 2rem
+        font-size: 1.5rem
     }
+
 
   }
     .btn {
