--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -37,7 +37,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Sign up", class: "btn btn-hl btn-block" %>
+        <%= f.submit "Sign up", class: "btn btn-carrot btn-block" %>
       </div>
 
     <% end %>
