--- a/app/assets/stylesheets/episodes.scss
+++ b/app/assets/stylesheets/episodes.scss
@@ -17,7 +17,7 @@
     text-align: center;
     font-size: 0.9rem;
     line-height: 1.7;
-    color: lighten($dark, 25%);
+    color: $black;
   }
 
 
