--- a/app/assets/stylesheets/podcast-show.css.scss
+++ b/app/assets/stylesheets/podcast-show.css.scss
@@ -12,7 +12,7 @@
     .description {
       width: 85%;
       margin: 0 auto 2rem auto;
-      color: lighten($dark, 35%);
+      color: $white;
     }
     .subscribe-link {
       font: {
@@ -24,7 +24,7 @@
         align: center;
         decoration: none;
       };
-      color: $white;
+      color: $black;
       display: inline;
       background: $highlight;
       border-radius: 2rem;
@@ -40,14 +40,14 @@
 #breadcrumb {
   padding: 1rem 0;
   text-align: center;
-  border-bottom: 1px solid lighten($dark, 50%);
+  border-bottom: 1px solid lighten($black, 50%);
   a {
     font: {
       weight: 700;
       size: 0.7rem;
     };
     text-decoration: none;
-    color: lighten($dark, 45%);
+    color: lighten($black, 45%);
   }
 }
 
@@ -58,7 +58,7 @@
     padding-left: 0;
     li {
       padding-bottom: 2rem;
-      border-bottom: 2px solid lighten($dark, 50%);
+      border-bottom: 2px solid lighten($black, 50%);
       margin-bottom: 2rem;
       &:last-child {
         border-bottom: none;
@@ -78,13 +78,17 @@
         margin-left: 1.5%;
         h2 {
           a {
-            color: $dark;
+            color: $black;
             text-decoration: none;
+
+            &:hover {
+              color: $highlight;
+            }
           }
         }
       }
       .description {
-        color: lighten($dark, 25%);
+        color: $black;
       }
     }
   }
