--- a/app/assets/stylesheets/podcasts.scss
+++ b/app/assets/stylesheets/podcasts.scss
@@ -1,8 +1,6 @@
 .podcasts-banner {
-//    background: #FF9800;
-//    background: #FFC107;
   background: {
-    image: image-url("podcasts_banner.jpg");
+    image: linear-gradient( rgba(0,0,0,.5), rgba(0,0,0,0.5) ), image-url("field-path.jpeg");
     repeat: no-repeat;
     size: cover;
     position: center center;
@@ -51,13 +49,13 @@
             size: 1rem;
             weight: 700;
           };
-          color: $dark;
+          color: $black;
           &:hover {
             color: $highlight;
           }
         }
         .episode-count {
-          color: lighten($dark, 50%);
+          color: lighten($black, 50%);
           font-size: 0.9rem;
           margin: 0.5rem 0 0.25rem 0;
         }
