--- a/app/assets/stylesheets/sign-in-sign-up.css.scss
+++ b/app/assets/stylesheets/sign-in-sign-up.css.scss
@@ -1,7 +1,7 @@
 #sign-in-banner {
-  background-image: image-url("sign_in_banner.jpg");
+  background-image: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), image-url("person-in-hoodie.jpeg");
 }
 
 #sign-up-banner {
-  background-image: image-url("sign_up_banner.jpg");
+  background-image: linear-gradient( rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6) ), image-url("hopi-proverb.jpg");
 }
