--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -10,29 +10,16 @@
 //  background: #FFC107; // amber
 
   header {
-    padding: .5rem;
+    padding-top: 2.5rem;
     text-align: center;
     box-sizing: border-box;
     text-align: center;
 
     #sslogo {
-      height: 7rem;
-      display: inline-block;
-      float: left;
+      height: 8rem;
+      display: block;
+      margin: 0 auto;
 
-      @media screen and (max-width: 1125px) {
-        float: none;
-        display: block;
-        margin: 0 auto
-      }
-
-      @media screen and (max-width: 960px) {
-        font-size: 2rem;
-      }
-
-      @media screen and (max-width: 620px) {
-        font-size: 1.5rem;
-      }
     }
 
     #logo {
@@ -54,90 +41,8 @@
         font-size: 2rem;
       }
 
-      @media screen and (max-width: 620px) {
+      @media screen and (max-width: 630px) {
         font-size: 1.5rem;
-      }
-    }
-
-    nav {
-      display: inline-block;
-      float: right;
-      padding: 1.5rem 0 0 0;
-
-      @media screen and (max-width: 1125px) {
-        padding-top: .5rem;
-        float: none;
-        display: block;
-      }
-
-      ul {
-        padding-left: 0;
-
-        li {
-          display: inline-block;
-          list-style: none;
-          text-transform: uppercase;
-          font-size: 1rem;
-          margin-left: 0;
-
-          @media screen and (max-width: 630px) {
-            display: block;
-            padding: .5rem 0;
-            font-size: .8rem;
-          }
-
-          a {
-            text-decoration: none;
-            color: $black;
-            padding: 0 1.5rem;
-
-            @media screen and (max-width: 630px) {
-              font-size: .8rem;
-              padding: 0rem;
-              color: white;
-
-            }
-
-          }
-
-          a::before,
-          a::after {
-            opacity: 0;
-            display: inline-block;
-            -webkit-transition: -webkit-transform 0.3s, opacity 0.2s;
-            -moz-transition: -moz-transform 0.3s, opacity 0.2s;
-            transition: transform 0.3s, opacity 0.2s;
-          }
-
-          a::before {
-            margin-right: 10px;
-            display: inline-block;
-            content: "(";
-            -webkit-transform: translateX(20px);
-            -moz-transform: -moz-translateX(20px);
-            transform: translateX(20px);
-
-          }
-
-          a::after {
-            margin-left: 10px;
-            display: inline-block;
-            content: ")";
-            -webkit-transform: translateX(-20px);
-            -moz-transform: -moz-translateX(-20px);
-            transform: translateX(-20px);
-          }
-
-          a:hover::before,
-          a:hover::after,
-          a:focus::before,
-          a:focus::after {
-            opacity: 1;
-            -webkit-transform: translateX(0px);
-            -moz-transform: translateX(0px);
-            transform: translateX(0px);
-          }
-        }
       }
     }
   }
@@ -157,7 +62,6 @@
 
       span {
         color: #FF6D00; // orange accent
-
       }
 
       a {
@@ -166,13 +70,12 @@
         border-bottom: 2px solid $black;
 
         &:hover {
-           color: #FF6D00; // orange accent
+          color: #FF6D00; // orange accent
           border-bottom: 2px solid #FF6D00;
         }
       }
 
       @media screen and (max-width: 1125px) {
-        margin: 1rem;
         font-size: 3rem;
     }
 
@@ -183,11 +86,9 @@
 
   }
     .btn {
-      margin: 1.5rem 2.5% 0 2.5%;
       font-size: 1.3rem;
-      font-weight: 700;
 
-      @media screen and (max-width: 620px) {
+      @media screen and (max-width: 630px) {
         font-size: .8rem;
       }
     }
