--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -81,7 +81,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Update", class: "btn btn-hl btn-block" %>
+        <%= f.submit "Update", class: "btn btn-carrot btn-block" %>
       </div>
     <% end %>
 
