--- a/app/views/episodes/_form.html.erb
+++ b/app/views/episodes/_form.html.erb
@@ -17,5 +17,5 @@
     <%= f.file_field :mp3 %>
   </div>
 
-  <%= f.submit class: "btn btn-hl btn-block" %>
+  <%= f.submit class: "btn btn-carrot btn-block" %>
 <% end %>
