--- a/app/views/podcasts/dashboard.html.erb
+++ b/app/views/podcasts/dashboard.html.erb
@@ -2,7 +2,7 @@
 <div id="podcast-show">
   <div id="show-banner">
     <div class="wrapper-skinny">
-      <h1><%= @podcast.title + " " + "Dashboard" %></h1>
+      <h1><%= @podcast.title + " Dashboard" %></h1>
     </div>
   </div>
 </div>
