Change logo to SVG

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <div id="background">
   <header class="cf">
     <div class="wrapper-wide">
-      <%= link_to image_tag("SmokeSignal-teepeetower(s).png", :id => "sslogo"), root_path %>
+      <%= link_to image_tag("smoke-signals-ss.svg", :id => "sslogo"), root_path %>
     </div>
   </header>
   <div class="wrapper-skinny">
