--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -70,8 +70,6 @@ $black: #505050;
 
 body {
   font-family: 'SinkinSans XLight', sans-serif;
-  position: relative;
-  height: 100%;
 }
 
 .wrapper-wide {
@@ -81,13 +79,13 @@ body {
 
 #banner  {
   width: 100%;
-  height: 45%;
+  height: 60%;
   min-width: 320px;
   max-width: 560px;
   overflow: auto;
   margin: auto;
   position: absolute;
-  top: 0;
+  top: 10rem;
   left: 0;
   bottom: 0;
   right: 0;
